--- a/Programm/templates/A_Produkte.html
+++ b/Programm/templates/A_Produkte.html
@@ -1,5 +1,4 @@
 <!--Filename = A_Produkte.html-->
-
 <!DOCTYPE html>
 <html lang="de">
 
@@ -8,14 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <script src="/static/js/flash.js"></script>
-    <script>
-        // Get flash messages from the server-side template
-        const flashMessages = {{ get_flashed_messages() | tojson }};
-
-        // Call the function from the external JavaScript file
-        displayFlashMessages(flashMessages);
-    </script>
+    <script src="/static/js/flash.js" defer></script>
 </head>
 
 <body>
@@ -35,7 +27,16 @@
         <a href="/add_product" class="admin-link">Produkt hinzufügen</a>
         <a href="/edit_product_prices" class="admin-link">Produkt bearbeiten</a>
     </div>
-</body>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Get flash messages from the server-side template
+            const flashMessages = {{ get_flashed_messages() | tojson | safe }};
+
+            // Call the function from the external JavaScript file
+            displayFlashMessages(flashMessages);
+        });
+    </script>
+</body>
 
 </html>
