--- a/Programm/templates/admin.html
+++ b/Programm/templates/admin.html
@@ -1,5 +1,3 @@
-<!--Filename = admin.html-->
-
 <!DOCTYPE html>
 <html lang="de">
 
@@ -30,6 +28,12 @@
             <a href="/items" class="admin-link">Spielzeug</a>
             <a href="/statistik" class="admin-link">Statistik</a>
             <a href="/dblogin" class="admin-link">Datenbankverwaltung</a>
+            <br>
+            <br>
+            <!-- Add Shutdown Button -->
+            <form class="form-in-div" action="/shutdown" method="post">
+                <button class="bt" type="submit" class="admin-button">Shutdown</button>
+            </form>
         </div>
     </div>
 
